# bevy_template_wsl2

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: main.rs
template_game/: Cargo.toml
template_game/src/: main.rs
template_lib/: Cargo.toml
template_lib/src/: lib.rs
