[package]
name = "template_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.2"}
template_lib = { path = "../template_lib", version = "0.1.0"}

[features]
default = ["fast-compile"]
fast-compile = ["bevy/dynamic_linking"]